[ADD] Eating food makes the TF2 nom sound(bad luck if you don't have TF2)
[ADD] Poo and pee mod :D enable with rp_poopeemod 1
[ADD] Anti slobbot server crash
[ADD] Weapon checker for the cops, chief and admin
[ADD] New, more subtle and easier to find easter egg.
[ADD] /wake and /wakeup command :)
[FIX] Version number in the help screen
[FIX] Battering ram not working on warranted people
[FIX] Zombie spawns not saving, jailpositions not saving AND custom spawns not saving!
[FIX] People being able to spawn inside each other
[FIX] rp_max<custom team> erroring sometimes and breaking the whole fucking gamemode
[FIX] rp_grant breaking when the console enters it
[FIX] Stupid and retarded error in the player possessor :downs:
[FIX] Atefood icon showing for everyone
[FIX] Prop protection toggle not working
[FIX] Normalsalary being stored twice.
[FIX] /teamban not working
[FIX] RP_max<customteam>s unable to be set to 0
[FIX] Unable to drop custom shipment weapons
[FIX] Zombie move code(Thanks Enjia2000)
[FIX] Enhanced "players don't spawn in each other" code
[FIX] Zombies spawning in each other using the "players don't spawn in each other" code (a bit thanks to Enjia2000)
[FIX] Settings and globals not loading
[FIX] prop protection assigning all world props to the owner of the server(in case of a listen server)
[CHANGE] /buypistol to /buy because of the custom items
[CHANGE] rp_max<customteam> to rp_max<customteam>s
[CHANGE] Made admins.lua a bit more idiot proof
[CHANGE] Cooks can now buy food too when hungermod is off
[CHANGE] Letters get removed after 10 minutes, long enoug and prevents them for lying there for like hours.
[CHANGE] Custom shipments without a team entered will make it so that every team can spawn the shipment
[CHANGE] Moved changelog part in init.lua to the changelog.txt file
[CHANGE] The way of saving settings and globals, it now doesn't use text files but SQL